--- a/app-traffixor/package.json
+++ b/app-traffixor/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
     "@tailwindcss/postcss": "^4.2.0",
     "i18next": "^25.8.13",
     "i18next-browser-languagedetector": "^8.2.1",
